Fix header bar display on smaller browsers

--- a/src/styles/stdtheme.less
+++ b/src/styles/stdtheme.less
@@ -28,6 +28,7 @@ div.header {
     padding: 8px 16px;
     font-family: 'montserrathairline';
     font-size: 32px;
+    text-align: center;
 }
 
 .mae-button-hover() {
@@ -48,6 +49,5 @@ div.mae-button:active {
 }
 
 div.mae-logo {
-    text-align: right;
     cursor: default;
 }
